[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pidcontroller"
version = "0.0.1"
author = [
    { name="Anagh Phanse", email="anaghphanse@gmail.com"}
]
description = "A simple PID controller in Python"
readne = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/anaphan1/pidcontroller"
Issues = "https://github.com/anaphan1/pidcontroller/issues"